# aes-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/aes_core/: decryption.rs  encryption.rs  interface.rs  key.rs  mode.rs  util.rs
src/aes_lib/: cipher.rs  key.rs  mod.rs  mode.rs  util.rs
src/aes_lib/core/: decryption.rs  encryption.rs  mod.rs
src/aesp/: cipher.rs
src/aesp/core/: decryption.rs  encryption.rs
src/aesp/modes/: ctr.rs  ecb.rs  gcm.rs  mod.rs  util.rs
tests/: common.rs
tests/vectors/: aes128gcm.rs  aes256gcm.rs
